Enhanced documentation with improved UI and custom scrollbar styling
- Added custom scrollbar styling with dark/light mode support
- Enhanced installation page with better formatting and icons
- Improved examples page with visual tech stack cards
- Added new framework logos (TypeScript, MUI, Playwright)
- Updated keyboard shortcuts with proper kbd styling
- Enhanced documentation images and visual elements
- Improved overall user experience and visual consistency

--- a/get-started/Quick Start.mdx
+++ b/get-started/Quick Start.mdx
@@ -63,4 +63,4 @@ description: "Choose your preferred way to get started with TestSprite. We offer
 3. Run your **first test** in under 10 minutes
 4. Explore **advanced features** like scheduled testing and CI/CD integration
 
-Need help? Check our [FAQ](/faq) or [contact us](https://calendly.com/contact-hmul/schedule).
+Need help? Check our [FAQ](/faq) or [contact us <Icon icon="arrow-up-right-from-square" size={12} />](https://calendly.com/contact-hmul/schedule).
