--- a/mcp/overview.mdx
+++ b/mcp/overview.mdx
@@ -14,7 +14,7 @@ TestSprite MCP Server is a
 ## How It Works
 
 Enter the magic command to your coding agent:
-```
+```json icon="file-lines"
 Help me test this project with TestSprite.
 ```
 
@@ -199,7 +199,3 @@ TestSprite MXCP Server delivers measurable improvements:
 - **10x Faster Testing** - From hours to minutes
 - **Zero Learning Curve** - No testing expertise required
 - **Automatic Bug Fixes** - AI patches issues automatically
-
----
-
-Ready to experience the future of testing? Let's get you set up in the next section. 
