--- a/mcp/workflow.mdx
+++ b/mcp/workflow.mdx
@@ -1,17 +1,13 @@
 ---
 title: "Testing Workflow"
-toc_max_heading_level: 2
+description: "Understand the complete TestSprite MCP Server testing process from code analysis to bug fixes."
 ---
-
-import Head from 'next/head'
-
-
-Understand the complete TestSprite MCP Server testing process from code analysis to bug fixes.
 
 ## Overview
 
 TestSprite MCP Server follows a systematic 8-step workflow that transforms your code into thoroughly tested, production-ready software:
 
+<Frame>
 ```mermaid
 graph LR
     A[Bootstrap Environment] --> B[Read User PRD]
@@ -24,6 +20,7 @@ graph LR
     G --> H[Provide Results & Analysis]
     H --> I[AI Fixes Issues]
 ```
+</Frame>
 
 ## Step 1: Bootstrap Testing Environment
 
